Troca da API de imagem e mini atualizações
